--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/bottom-tabs": "^7.0.5",
-    "@react-navigation/native": "^7.0.3",
-    "@react-navigation/stack": "^7.0.4",
+    "@react-navigation/bottom-tabs": "^7.3.9",
+    "@react-navigation/native": "^7.1.5",
+    "@react-navigation/stack": "^7.2.9",
     "@supabase/supabase-js": "^2.38.4",
     "expo": "^52.0.44",
     "expo-status-bar": "~2.0.1",
@@ -23,9 +24,9 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
