--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^5.1.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.1.5",
+    "@react-navigation/native-stack": "^7.3.9",
     "@react-navigation/stack": "^7.2.9",
-    "@supabase/supabase-js": "^2.38.4",
+    "@supabase/supabase-js": "^2.49.4",
     "expo": "^52.0.44",
     "expo-status-bar": "~2.0.1",
     "nativewind": "latest",
