--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pie-chart": "^4.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
