added ai screen and functionality

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@google/generative-ai": "^0.24.0",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.9",
@@ -22,6 +23,7 @@
     "expo": "^52.0.44",
     "expo-status-bar": "~2.0.1",
     "nativewind": "latest",
+    "openai": "^4.93.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
