--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "openai": "^4.93.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pie-chart": "^4.0.1",
     "react-native-reanimated": "~3.16.1",
